--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Body
-$body-bg: #fff;
+$body-bg: #f5f8fa;
 
 // Borders
 $laravel-border-color: darken($body-bg, 10%);
@@ -23,7 +23,7 @@ $line-height-base: 1.6;
 $text-color: #636b6f;
 
 // Navbar
-$navbar-default-bg: #f5f5f5;
+$navbar-default-bg: #fff;
 
 // Buttons
 $btn-default-color: $text-color;
