--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,10 +10,13 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  /*this is a test*/
+  height: 100%;
 }
 
 body {
   margin: 0;
+  height: 100%;
 }
 
 article,
