private messaging logic, and inbox view completed

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,11 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+@import "font-awesome-4.7.0/scss/font-awesome";
+
+@import "style";
+
+@import "style-responsive";
+
+@import "table-responsive";
