--- a/public/css/galaxy-map.css
+++ b/public/css/galaxy-map.css
@@ -1,4 +1,5 @@
 #galaxy-map-content-container {
+	position: relative;
 	margin: 0;
 	padding: 0;
 	width: 99.5%;
@@ -6,8 +7,62 @@
 }
 
 #galaxy-map-image {
+	z-index: 5;
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	height: auto;
+}
+
+#galaxy-overlay-container {
+	position: absolute;
+	z-index: 6;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	
+	background-color: rgba(0, 0, 255, 0.1);
+}
+
+#galaxy-overlay-innter-container {
+	position: relative;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.system-icon-container {
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	width: 14px;
+	height: 14px;
+	
+	left: calc(50% - 8px);
+	top: calc(50% - 8px);
+	
+	border: none;
+}
+
+.system-icon-container:hover {
+	cursor: pointer;
+	border: 1px solid white;
+	left: calc(50% - 9px);
+	top: calc(50% - 9px);
+}
+
+.system-icon-container div {
+	margin: 0;
+	padding: 0;
+	width: 8px;
+	height: 8px;
+	margin-left: 2px;
+	margin-top: 2px;
+	background-color: red;
+	
+	border-radius: 4px;
+	box-shadow: 0px 0px 2px 1px black;
 }
