--- a/public/css/galaxy-map.css
+++ b/public/css/galaxy-map.css
@@ -66,3 +66,120 @@
 	border-radius: 4px;
 	box-shadow: 0px 0px 2px 1px black;
 }
+
+.system-icon-container:hover div {
+	background-color: white;
+}
+
+#popup-container {
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	width: 202px;
+	height: 50px;
+	
+	left: 25%;
+	top: 25%;
+	
+	background-color: rgba(0, 0, 0, 0.5);
+	border: 1px solid rgb(100, 100, 100);
+}
+
+#popup-top-bar-container {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 24px;
+	#background-color: rgba(255, 255, 255, 0.14);
+	border-bottom: 1px solid rgb(100, 100, 100);
+	font-size: 0;
+}
+
+#solar-system-name-container {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	width: 175px;
+	height: 25px;
+	
+	#background-color: rgba(255, 0, 0, 0.25);
+	vertical-align: top;
+}
+
+#popup-system-name {
+	margin:  0;
+	padding: 0;
+	width:  100%;
+	height: 100%;
+	padding-left: 5px;
+	padding-right: 5px;
+	
+	#background-color: rgba(255, 0, 0, 0.25);
+	
+	color: white;
+	font-family: "Ruda";
+	font-size: 14px;
+	text-decoration: none;
+	letter-spacing: 2px;
+	line-height: 25px;
+}
+
+#popup-x-button-container {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	width: 25px;
+	height: 25px;
+	
+	#background-color: rgba(0, 0, 255, 0.25);
+	vertical-align: top;
+}
+
+#popup-x-button {
+	margin: 0;
+	padding: 0;
+	width: 17px;
+	height: 17px;
+	margin-top: 4px;
+	margin-left: 4px;
+	
+	opacity: 0.5;
+}
+
+#popup-x-button:hover {
+	cursor: pointer;
+	opacity: 1;
+}
+
+#go-to-system-link-container {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 25px;
+	
+	#background-color: rgba(0, 255, 0, 0.25);
+	text-align: center;
+}
+
+#go-to-system-link {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	
+	#background-color: rgba(255, 0, 0, 0.25);
+	
+	color: white;
+	font-family: "Ruda";
+	font-size: 16px;
+	text-decoration: none;
+	letter-spacing: 2px;
+	
+	opacity: 0.5;
+}
+
+#go-to-system-link:hover {
+	cursor: pointer;
+	text-decoration: underline;
+	opacity: 1;
+}
