--- a/public/css/galaxy-map.css
+++ b/public/css/galaxy-map.css
@@ -50,11 +50,12 @@
 .system-icon-container:hover {
 	cursor: pointer;
 	border: 1px solid white;
-	left: calc(50% - 9px);
-	top: calc(50% - 9px);
+	transform: translate(-1px, -1px);
+	#left: calc(50% - 10px);
+	#top: calc(50% - 10px);
 }
 
-.system-icon-container div {
+.system-icon-inner-container {
 	margin: 0;
 	padding: 0;
 	width: 8px;
@@ -67,11 +68,12 @@
 	box-shadow: 0px 0px 2px 1px black;
 }
 
-.system-icon-container:hover div {
+.system-icon-container:hover .system-icon-inner-container {
 	background-color: white;
 }
 
 #popup-container {
+	display: none;
 	position: absolute;
 	margin: 0;
 	padding: 0;
