Attempted to remove custom links to css/js in galaxy map page and use gulp/elixir.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,6 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+// Galaxy-Map
+@import "resources/assets/css/galaxy-map";
