Added initial files for solar system view page.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,3 +10,7 @@
 
 // Galaxy-Map
 @import "resources/assets/css/galaxy-map";
+
+
+// Solar System View
+@import "resources/assets/css/solar-system-view";
