--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7855,4 +7855,71 @@ button.close {
   opacity: 1;
 }
 
+#solar-system-view-container {
+  margin: 0;
+  padding: 0;
+  width: 99.5%;
+  height: auto;
+  background-color: rgba(0, 255, 255, 0.5);
+  font-size: 0;
+}
+
+#planets-view-container {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+  height: 100%;
+  vertical-align: top;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
+#planets-info-container {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+  height: 100%;
+  vertical-align: top;
+  background-color: rgba(0, 0, 255, 0.5);
+}
+
+#planets-view-inner-container {
+  margin: 0;
+  padding: 0;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
+  margin-left: 20px;
+  margin-top: 20px;
+  background-color: rgba(0, 255, 0, 0.5);
+}
+
+#planets-info-inner-container {
+  margin: 0;
+  padding: 0;
+  width: calc(100% - 20px);
+  height: calc(100% - 40px);
+  margin-left: 10px;
+  margin-top: 20px;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+
+.planets-view-columns {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.planet-view-cell {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 200px;
+  background-color: rgba(0, 255, 0, 0.5);
+  border-bottom: 1px solid white;
+}
+
 /*# sourceMappingURL=app.css.map */
