--- a/resources/assets/css/solar-system-view.css
+++ b/resources/assets/css/solar-system-view.css
@@ -3,18 +3,20 @@
 	padding: 0;
 	width: 99.5%;
 	height: auto;
-	background-color: rgba(0, 255, 255, 0.5);
 	font-size: 0;
+	background-color: rgb(230, 230, 230);
+	border: 1px solid rgb(180, 180, 180);
 }
 
 #planets-view-container {
 	display: inline-block;
 	margin: 0;
 	padding: 0;
-	width: 50%;
+	width: calc(50% - 1px);
 	height: 100%;
 	vertical-align: top;
-	background-color: rgba(255, 0, 0, 0.5);
+	border-right: 1px solid rgb(180, 180, 180);
+	padding-bottom: 20px;
 }
 
 #planets-info-container {
@@ -34,17 +36,16 @@
 	height: calc(100% - 40px);
 	margin-left: 20px;
 	margin-top: 20px;
-	background-color: rgba(0, 255, 0, 0.5);
 }
 
 #planets-info-inner-container {
 	margin: 0;
 	padding: 0;
-	width: calc(100% - 20px);
+	width: calc(100% - 40px);
 	height: calc(100% - 40px);
-	margin-left: 10px;
+	margin-left: 20px;
 	margin-top: 20px;
-	background-color: rgba(255, 0, 0, 0.5);
+	background-color: red;
 }
 
 .planets-view-columns {
@@ -60,7 +61,28 @@
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	height: 200px;
-	background-color: rgba(0, 255, 0, 0.5);
-	border-bottom: 1px solid white;
+	height: auto;
+}
+
+.planet-view-planet-image {
+	margin: 0;
+	padding: 0;
+	width: calc(100% - 80px);
+	height: calc(auto - 80px);
+	margin-left: 40px;
+	margin-top: 40px;
+}
+
+.planet-view-planet-name {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 25px;
+	margin-top: 20px;
+	
+	color: black;
+	font-size: 16px;
+	font-family: "Ruda";
+	line-height: 25px;
+	text-align: center;
 }
