Clicking the image of planet will now redirect the page to view that planet. The route for that page is not setup, so an error will occur for now.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7923,6 +7923,10 @@ button.close {
   margin-top: 40px;
 }
 
+.planet-view-planet-image:hover {
+  cursor: pointer;
+}
+
 .planet-view-planet-name {
   margin: 0;
   padding: 0;
