--- a/resources/assets/css/solar-system-view.css
+++ b/resources/assets/css/solar-system-view.css
@@ -66,6 +66,10 @@
 	margin-top: 40px;
 }
 
+.planet-view-planet-image:hover {
+	cursor: pointer;
+}
+
 .planet-view-planet-name {
 	margin: 0;
 	padding: 0;
