Initial commit of planet-overview branch. Set up route and have begun layout.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,3 +23,6 @@
 
 // Solar System View
 @import "resources/assets/css/solar-system-view";
+
+// Planet Overview page
+@import "resources/assets/css/planet_overview";
