--- a/resources/assets/css/planet_overview.css
+++ b/resources/assets/css/planet_overview.css
@@ -19,12 +19,42 @@
 	background-color: #ffd777;
 }
 
-#planet_info_outer_container {
+#planet_inline_container {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	height: 500px;
+	height: auto;
 	margin-top: 10px;
-	
-	background-color: rgba(0, 255, 0, 0.25);
+	font-size: 0;
+}
+
+#planet_image_container {
+	display: inline-block;
+	vertical-align: top;
+	margin: 0;
+	padding: 0;
+	width: calc(50% - 5px);
+	height: 100%;
+	background-color: rgba(0, 0, 0, 1);
+	padding-bottom: 25px;
+}
+
+#planet_info_container {
+	display: inline-block;
+	vertical-align: top;
+	margin: 0;
+	padding: 0;
+	width: calc(50% - 5px);
+	height: 100%;
+	margin-left: 10px;
+	background-color: rgba(0, 0, 255, 0.25);
+}
+
+#planet_image {
+	margin: 0;
+	padding: 0;
+	width: calc(100% - 50px);
+	height: auto;
+	margin-left: 25px;
+	margin-top: 25px;
 }
