--- a/resources/assets/css/planet_overview.css
+++ b/resources/assets/css/planet_overview.css
@@ -11,10 +11,11 @@
 	width: 100%;
 	height: 50px;
 	
-	color: black;
+	color: white;
 	font-size: 26px;
 	text-align: center;
 	line-height: 50px;
+	text-shadow: 1px 1px 2px rgb(100, 100, 100);
 	
 	background-color: #ffd777;
 }
@@ -47,7 +48,7 @@
 	width: calc(50% - 5px);
 	height: 100%;
 	margin-left: 10px;
-	background-color: rgba(0, 0, 255, 0.25);
+	font-size: 16px;
 }
 
 #planet_image {
@@ -57,4 +58,23 @@
 	height: auto;
 	margin-left: 25px;
 	margin-top: 25px;
+}
+
+.info_line_breaker {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 20px;
+}
+
+#solar_system_name, #solar_system_location, #planet_owner_name, #planet_radius, #planet_resources_header,
+#planet_metal, #planet_crystal, #planet_energy {
+	margin: 0;
+	padidng: 0;
+	width: 100%;
+	height: 20px;
+	
+	color: black;
+	line-height: 20px;
+	text-align: left;
 }
