--- a/resources/assets/css/galaxy-map.css
+++ b/resources/assets/css/galaxy-map.css
@@ -35,6 +35,7 @@
 
 .system-icon-container {
 	position: absolute;
+	z-index: 4;
 	margin: 0;
 	padding: 0;
 	width: 14px;
@@ -69,6 +70,7 @@
 #popup-container {
 	display: none;
 	position: absolute;
+	z-index: 5;
 	margin: 0;
 	padding: 0;
 	width: 202px;
