--- a/resources/assets/sass/galaxy-map.css
+++ b/resources/assets/sass/galaxy-map.css
@@ -35,6 +35,7 @@
 
 .system-icon-container {
 	position: absolute;
+	z-index: 4;
 	margin: 0;
 	padding: 0;
 	width: 14px;
@@ -62,6 +63,18 @@
 	box-shadow: 0px 0px 2px 1px black;
 }
 
+.system-icon-inner-container-my {
+	margin: 0;
+	padding: 0;
+	width: 8px;
+	height: 8px;
+	margin-left: 2px;
+	margin-top: 2px;
+	background-color: yellow;
+	border-radius: 4px;
+	box-shadow: 0px 0px 2px 1px black;
+}
+
 .system-icon-container:hover .system-icon-inner-container {
 	background-color: white;
 }
@@ -69,6 +82,7 @@
 #popup-container {
 	display: none;
 	position: absolute;
+	z-index: 5;
 	margin: 0;
 	padding: 0;
 	width: 202px;
@@ -155,7 +169,7 @@
 	font-size: 16px;
 	text-decoration: none;
 	letter-spacing: 2px;
-	
+
 	opacity: 0.5;
 }
 
@@ -164,4 +178,3 @@
 	text-decoration: underline;
 	opacity: 1;
 }
-/*# sourceMappingURL=galaxy-map.css.map */
