--- a/resources/assets/sass/solar-system-view.css
+++ b/resources/assets/sass/solar-system-view.css
@@ -60,7 +60,7 @@
 	margin: 0;
 	padding: 0;
 	width: calc(100% - 80px);
-	height: calc(auto - 80px);
+	height: calc(100% - 80px);
 	margin-left: 40px;
 	margin-top: 40px;
 }
@@ -75,7 +75,7 @@
 	width: 100%;
 	height: 25px;
 	margin-top: 20px;
-	
+
 	color: black;
 	font-size: 16px;
 	font-family: "Ruda";
